plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.12'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'factseeker-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'mysql:mysql-connector-java:8.0.33'
    // 이메일 의존성
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // JWT 의존성 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    // Redis 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    //Lettuce
    implementation 'io.lettuce:lettuce-core'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // webClient (비동기 동작을 위함)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'com.google.api-client:google-api-client:2.7.0'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20250714-2.0.0'
    implementation 'com.google.http-client:google-http-client-jackson2:1.44.2'

    // LLM API 의존성 추가
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'  // OpenAI
    // implementation 'com.google.ai.client.generativeai:generativeai:0.1.2'  // Gemini - 나중에 추가
    // implementation 'com.anthropic:anthropic-sdk:0.7.0'  // Claude - 나중에 추가

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'


    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
